# Authentication

./: .gitignore  exploration.ipynb
authentication/: CMakeLists.txt
authentication/collector/: main.cpp
authentication/collector/authenticator/: Authenticator.cpp  Authenticator.h  IAuthenticator.h
authentication/collector/keyboard/: KeyboardReader.cpp  KeyboardReader.h
authentication/collector/sensors/: AccelerometerReader.cpp  AccelerometerReader.h  GyroscopeReader.cpp  GyroscopeReader.h  SensorManager.cpp  SensorManager.h  SensorReader.cpp  SensorReader.h
authentication/collector/sensors/filters/: AccelerometerRateFilter.cpp  AccelerometerRateFilter.h  GyroscopeRateFilter.cpp  GyroscopeRateFilter.h
authentication/rpm/: authentication.spec
ml/: activity_classification.ipynb  binary_classification.ipynb  data_preprocessing.ipynb  data_preprocessing_activity_cls.ipynb  exploration.ipynb  models.ipynb  oneclasssvm.ipynb  predictor.py
ml/hmog/: HmogHelper.py  MyDatasetHelper.py
ml/hmog/models/: models.py
